syntax = "proto3";
package network_protocol.items;

import "google/protobuf/empty.proto";

message CommandFrame {
  oneof variant {
    string send_message = 1;
  }
}

message EventFrame {
  oneof variant {
    ChatMessageFrame received_message = 1;
  }
}

message ChatMessageFrame {
  string contents = 1;
  string sender = 2;
}
